--- a/app/views/layouts/_simplenav.html.haml
+++ b/app/views/layouts/_simplenav.html.haml
@@ -16,11 +16,9 @@
             :onfocus => "if(this.value=='Password'){this.value='';this.style.color = '#000000';this.type='password'}",
             :onblur => "if(this.value==''){this.value='Password';this.style.color = '#000000';this.type='text'}"
           .nav-button.smallnav
-            = f.submit "Login", :class => 'transparent', :id => 'logout-button', :style => 'border: 0px !important;'
+            = f.submit "Login", :class => 'login-button'
     -else
       #login-container
-        .nav-button#logout-button
-          =link_to "Logout", destroy_user_session_path, :method => :delete, :class => "home-link bigger image white-text stroke text-glow-hover log"
-        .nav-button#edit-profile-button
-          =link_to "Edit Profile", edit_user_registration_path, :class => "home-link bigger image white-text stroke text-glow-hover log"
+        =link_to "Logout", destroy_user_session_path, :method => :delete, :class => "logout-button"
+        =link_to "Edit Profile", edit_user_registration_path, :class => "edit-button"
     %img#logo.left-justify
