--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -4,49 +4,44 @@
 = stylesheet_link_tag "registrations.css"
 %h1.away-from-edge Login
 = form_for(resource, as: resource_name, url: session_path(resource_name)) do |f|
-  .col.s4
-    = f.text_field :email,
-      :value => "Email",
-      :style => "color:#000000;background-color:white;border:solid;border-width:2px;height:33px;text-indent:5px;",
-      :onfocus => "if(this.value=='Email'){this.value='';this.style.color = '#000000';}",
-      :color => "white",
-      :onblur => "if(this.value==''){this.value='Email';this.style.color = '#000000';}"
-  .col.s4
-    = f.text_field :password,
-      :value => "Password",
-      :autocomplete => "off",
-      :style => "color:#000000;background-color:white;border:solid;border-width:2px;height:33px;text-indent:5px;",
-      :onfocus => "if(this.value=='Password'){this.value='';this.style.color = '#000000';this.type='password'}",
-      :onblur => "if(this.value==''){this.value='Password';this.style.color = '#000000';this.type='text'}"
-  .col.s4
-    = f.submit "Login", :class => 'btn black-text teal lighten-4'
+  = f.text_field :email,
+    :value => "Email",
+    :style => "color:#000000;background-color:white;border:solid;border-width:2px;height:33px;text-indent:5px;",
+    :onfocus => "if(this.value=='Email'){this.value='';this.style.color = '#000000';}",
+    :color => "white",
+    :onblur => "if(this.value==''){this.value='Email';this.style.color = '#000000';}"
+  = f.text_field :password,
+    :value => "Password",
+    :autocomplete => "off",
+    :style => "color:#000000;background-color:white;border:solid;border-width:2px;height:33px;text-indent:5px;",
+    :onfocus => "if(this.value=='Password'){this.value='';this.style.color = '#000000';this.type='password'}",
+    :onblur => "if(this.value==''){this.value='Password';this.style.color = '#000000';this.type='text'}"
+  = f.submit "Login"
 
-.row
-  %h1.away-from-edge Or Sign up
-  - if @user == current_user
-    =best_in_place @user, :bio, as: :textarea, url: 'users/bio/'
-  - else
-    =@user.bio
-  %div.form-box.col.m4.l4.s4
-    = form_for(resource, as: resource_name, url: registration_path(resource_name), validate: true, id: 'new-user') do |f|
-      = f.text_field :email,
-      :value => "Email",
-      :id => "user-email",
-      :class => "new-user big-form",
-      :style => "color:#000000;background-color:white;border:solid;border-width:2px;height:33px;text-indent:5px;",
-      :onfocus => "if(this.value=='Email'){this.value='';this.style.color = '#000000';}",
-      :color => "white",
-      :onblur => "if(this.value==''){this.value='Email';this.style.color = '#000000';}"
-      = f.text_field :password, autocomplete: "off", :class => 'new-account-form',
-      :value => "New Password",
-      :id => "wat",
-      :class => "password-margin new-user big-form",
-      :autocomplete => "off",
-      :style => "color:#000000;background-color:white;border:solid;border-width:2px;height:33px;text-indent:5px;",
-      :onfocus => "if(this.value=='New Password (4 characters minimum)'){this.value='';this.style.color = '#000000';this.type='password'}",
-      :onblur => "if(this.value==''){this.value='New Password (4 characters minimum)';this.style.color = '#000000';this.type='text'}"
-      .nav-button
-        %span#signup-button= f.submit "Sign Up", class: "finish-signup transparent", style: "border: 0px !important;"
+%h1.away-from-edge Or Sign up
+- if @user == current_user
+  =best_in_place @user, :bio, as: :textarea, url: 'users/bio/'
+- else
+  =@user.bio
+%div.form-box
+  = form_for(resource, as: resource_name, url: registration_path(resource_name), validate: true, id: 'new-user') do |f|
+    = f.text_field :email,
+    :value => "Email",
+    :id => "user-email",
+    :class => "new-user big-form",
+    :style => "color:#000000;background-color:white;border:solid;border-width:2px;height:33px;text-indent:5px;",
+    :onfocus => "if(this.value=='Email'){this.value='';this.style.color = '#000000';}",
+    :color => "white",
+    :onblur => "if(this.value==''){this.value='Email';this.style.color = '#000000';}"
+    = f.text_field :password, autocomplete: "off", :class => 'new-account-form',
+    :value => "New Password",
+    :id => "wat",
+    :class => "password-margin new-user big-form",
+    :autocomplete => "off",
+    :style => "color:#000000;background-color:white;border:solid;border-width:2px;height:33px;text-indent:5px;",
+    :onfocus => "if(this.value=='New Password (4 characters minimum)'){this.value='';this.style.color = '#000000';this.type='password'}",
+    :onblur => "if(this.value==''){this.value='New Password (4 characters minimum)';this.style.color = '#000000';this.type='text'}"
+    = f.submit "Sign Up"
 :javascript
   // $(document).ready(function () {
   // $(“#new_user”).validate({
