--- a/app/views/users/edit_username.html.haml
+++ b/app/views/users/edit_username.html.haml
@@ -1,47 +1,45 @@
 = stylesheet_link_tag "registrations.css" 
 = render 'layouts/nolognav'
-.row
-  %h1.away-from-edge Choose Username
-  - flash.each do |name, msg|
-    - if msg.class == Array
-      - msg.each do |message|
-        = content_tag :div, message, :id => "flash_#{name}"
-  %div.form-box.col.m4.l4.s4
-    = form_for(resource, as: resource_name, url: registration_path(resource_name), id: "register-form", builder: Judge::FormBuilder) do |f|
-      = devise_error_messages!
-      = f.text_field :username, 
-        :class => "new-user big-form",
-        :validate => true,
-        :id => "username-field",
-        :value => "Username",
-        :style => "color:#000000;background-color:white;border:solid;border-width:2px;height:33px;text-indent:5px;width:220px",
-        :onfocus => "if(this.value=='Username'){this.value='';this.style.color = '#000000';}",
-        :color => "white",
-        :onblur => "if(this.value==''){this.value='';this.style.color = '#000000';}"
-      = f.text_field :name,
-        :value => "Full Name",
-        :class => "new-user big-form",
-        :style => "color:#000000;background-color:white;border:solid;border-width:2px;height:33px;text-indent:5px;width:320px",
-        :color => "white",
-        :onfocus => "if(this.value=='Full Name'){this.value='';this.style.color = '#000000';}",
-        :onblur => "if(this.value==''){this.value='Full Name';this.style.color = '#000000';}"
-      = f.text_field :picture,
-        :value => "Profile Picture URL",
-        :class => "new-user pic-url big-form",
-        :style => "color:#000000;background-color:white;border:solid;border-width:2px;height:33px;text-indent:5px;width:320px",
-        :color => "white",
-        :onfocus => "if(this.value=='Profile Picture URL'){this.value='';this.style.color = '#000000';}",
-        :onblur => "if(this.value==''){this.value='Profile Picture URL';this.style.color = '#000000';}"
-      .nav-button.upload-picture
-        Take Picture
-        .invisible
-          = f.file_field :image,
-            :id => "pictureInput",
-            :class => "big-form img-upload"
-      #target
-      .section#separator
-      .centered.nav-button
-        %span#signup-button= f.submit "Save", class: "finish-signup transparent", style: "border: 0px !important;"
+%h1.away-from-edge Choose Username
+- flash.each do |name, msg|
+  - if msg.class == Array
+    - msg.each do |message|
+      = content_tag :div, message, :id => "flash_#{name}"
+%div.form-box
+  = form_for(resource, as: resource_name, url: registration_path(resource_name), id: "register-form", builder: Judge::FormBuilder) do |f|
+    = devise_error_messages!
+    = f.text_field :username, 
+      :class => "new-user big-form",
+      :validate => true,
+      :id => "username-field",
+      :value => "Username",
+      :style => "color:#000000;background-color:white;border:solid;border-width:2px;height:33px;text-indent:5px;width:220px",
+      :onfocus => "if(this.value=='Username'){this.value='';this.style.color = '#000000';}",
+      :color => "white",
+      :onblur => "if(this.value==''){this.value='';this.style.color = '#000000';}"
+    = f.text_field :name,
+      :value => "Full Name",
+      :class => "new-user big-form",
+      :style => "color:#000000;background-color:white;border:solid;border-width:2px;height:33px;text-indent:5px;width:320px",
+      :color => "white",
+      :onfocus => "if(this.value=='Full Name'){this.value='';this.style.color = '#000000';}",
+      :onblur => "if(this.value==''){this.value='Full Name';this.style.color = '#000000';}"
+    = f.text_field :picture,
+      :value => "Profile Picture URL",
+      :class => "new-user pic-url big-form",
+      :style => "color:#000000;background-color:white;border:solid;border-width:2px;height:33px;text-indent:5px;width:320px",
+      :color => "white",
+      :onfocus => "if(this.value=='Profile Picture URL'){this.value='';this.style.color = '#000000';}",
+      :onblur => "if(this.value==''){this.value='Profile Picture URL';this.style.color = '#000000';}"
+    .nav-button.upload-picture
+      Take Picture
+      .invisible
+        = f.file_field :image,
+          :id => "pictureInput",
+          :class => "big-form img-upload"
+    #target
+    .section#separator
+      = f.submit "Save", class: "finish-signup"
 :javascript
   $(function() {
     $('#pictureInput').on('change', function(event) {
