--- a/app/views/users/edit_username.html.haml
+++ b/app/views/users/edit_username.html.haml
@@ -13,21 +13,21 @@
       :validate => true,
       :id => "username-field",
       :value => "Username",
-      :style => "color:#000000;background-color:white;border:solid;border-width:2px;height:33px;text-indent:5px;width:220px",
+      :style => "color:#000000;background-color:white;",
       :onfocus => "if(this.value=='Username'){this.value='';this.style.color = '#000000';}",
       :color => "white",
       :onblur => "if(this.value==''){this.value='';this.style.color = '#000000';}"
     = f.text_field :name,
       :value => "Full Name",
       :class => "new-user big-form",
-      :style => "color:#000000;background-color:white;border:solid;border-width:2px;height:33px;text-indent:5px;width:320px",
+      :style => "color:#000000;background-color:white;",
       :color => "white",
       :onfocus => "if(this.value=='Full Name'){this.value='';this.style.color = '#000000';}",
       :onblur => "if(this.value==''){this.value='Full Name';this.style.color = '#000000';}"
     = f.text_field :picture,
       :value => "Profile Picture URL",
       :class => "new-user pic-url big-form",
-      :style => "color:#000000;background-color:white;border:solid;border-width:2px;height:33px;text-indent:5px;width:320px",
+      :style => "color:#000000;background-color:white;",
       :color => "white",
       :onfocus => "if(this.value=='Profile Picture URL'){this.value='';this.style.color = '#000000';}",
       :onblur => "if(this.value==''){this.value='Profile Picture URL';this.style.color = '#000000';}"
