--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -7,13 +7,13 @@
       = f.text_field :username,
         :value => "#{@username}",
         :class => "new-user",
-        :style => "color:#000000;background-color:white;border:solid;border-width:2px;height:33px;text-indent:5px;",
+        :style => "color:#000000;background-color:white;",
         :onfocus => "if(this.value=='Username' || this.value == '#{@username}'){this.value='';this.style.color = '#000';}",
         :onblur => "if(this.value==''){this.value='#{@username}';}"
       = f.text_field :email,
         :value => "#{@email}",
         :class => "new-user",
-        :style => "color:#000000;background-color:white;border:solid;border-width:2px;height:33px;text-indent:5px;",
+        :style => "color:#000000;background-color:white;",
         :onfocus => "if(this.value=='#{@email}'){this.value='';this.style.color = '#000000';}",
         :color => "white",
         :onblur => "if(this.value==''){this.value='#{@email}';this.style.color = '#000000';}"
@@ -21,21 +21,21 @@
         :value => "Current Password",
         :class => "new-user",
         :autocomplete => "off",
-        :style => "color:#000000;background-color:white;border:solid;border-width:2px;height:33px;text-indent:5px;",
+        :style => "color:#000000;background-color:white;",
         :onfocus => "if(this.value=='Current Password'){this.value='';this.style.color = '#000000';this.type='password'}",
         :onblur => "if(this.value==''){this.value='Current Password';this.type='text'}"
       = f.text_field :password,
         :value => "New Password (4 characters minimum)",
         :autocomplete => "off",
         :class => "new-user",
-        :style => "color:#000000;background-color:white;border:solid;border-width:2px;height:33px;text-indent:5px;",
+        :style => "color:#000000;background-color:white;",
         :onfocus => "if(this.value=='New Password (4 characters minimum)'){this.value='';this.style.color = '#000000';this.type='password'}",
         :onblur => "if(this.value==''){this.value='New Password (4 characters minimum)';this.style.color = '#000000';this.type='text'}"
       = f.text_field :name,
         :value => "#{@name}",
         :class => "new-user",
         :autocomplete => "off",
-        :style => "color:#000000;background-color:white;border:solid;border-width:2px;height:33px;text-indent:5px;",
+        :style => "color:#000000;background-color:white;",
         :onfocus => "if(this.value=='#{@name}'){this.value='';this.style.color = '#000000';}",  
         :onblur => "if(this.value==''){this.value='#{@name}'}"
       #explanation What to do when your profile is visited:
@@ -47,7 +47,7 @@
         :value => "#{@picture}",
         :class => "password-margin new-user pic-url",
         :autocomplete => "off",
-        :style => "color:#000000;background-color:white;border:solid;border-width:2px;height:33px;text-indent:5px;",
+        :style => "color:#000000;background-color:white;",
         :onfocus => "if(this.value=='#{@picture}'){this.value='';this.style.color = '#000000';}",  
         :onblur => "if(this.value==''){this.value='#{@picture}';}"
       .nav-button.upload-picture
@@ -62,28 +62,28 @@
       = f.text_field :username, 
       :class => "new-user",
       :value => "#{@username}",
-      :style => "color:#000000;background-color:white;border:solid;border-width:2px;height:33px;text-indent:5px;width:220px",
+      :style => "color:#000000;background-color:white;",
       :onfocus => "if(this.value=='#{@username}'){this.value='';this.style.color = '#000000';}",
       :color => "white",
       :onblur => "if(this.value==''){this.value='#{@username}';this.style.color = '#000000';}"
       = f.text_field :email,
       :value => "#{@email}",
       :class => "new-user",
-      :style => "color:#000000;background-color:white;border:solid;border-width:2px;height:33px;text-indent:5px;",
+      :style => "color:#000000;background-color:white;",
       :onfocus => "if(this.value=='#{@email}'){this.value='';this.style.color = '#000000';}",
       :color => "white",
       :onblur => "if(this.value==''){this.value='#{@email}';this.style.color = '#000000';}"
       = f.text_field :name,
       :value => "#{@name}",
       :class => "new-user",
-      :style => "color:#000000;background-color:white;border:solid;border-width:2px;height:33px;text-indent:5px;",
+      :style => "color:#000000;background-color:white;",
       :onfocus => "if(this.value=='#{@name}'){this.value='';this.style.color = '#000000';}",
       :color => "white",
       :onblur => "if(this.value==''){this.value='#{@name}';this.style.color = '#000000';}"
       = f.text_field :picture,
       :value => "#{@picture}",
       :class => "password-margin new-user pic-url",
-      :style => "color:#000000;background-color:white;border:solid;border-width:2px;height:33px;text-indent:5px;",
+      :style => "color:#000000;background-color:white;",
       :onfocus => "if(this.value=='#{@picture}'){this.value='';this.style.color = '#000000';}",
       :color => "white",
       :onblur => "if(this.value==''){this.value='#{@picture}';this.style.color = '#000000';}"
