--- a/app/views/devise/registrations/login.html.haml
+++ b/app/views/devise/registrations/login.html.haml
@@ -2,7 +2,7 @@
   .col.s4
     = f.text_field :email,
       :value => "Email",
-      :style => "color:#000000;background-color:white;border:solid;border-width:2px;height:33px;text-indent:5px;",
+      :style => "color:#000000;background-color:white;",
       :onfocus => "if(this.value=='Email'){this.value='';this.style.color = '#000000';}",
       :color => "white",
       :onblur => "if(this.value==''){this.value='Email';this.style.color = '#000000';}"
@@ -10,10 +10,10 @@
     = f.text_field :password,
       :value => "Password",
       :autocomplete => "off",
-      :style => "color:#000000;background-color:white;border:solid;border-width:2px;height:33px;text-indent:5px;",
+      :style => "color:#000000;background-color:white;",
       :onfocus => "if(this.value=='Password'){this.value='';this.style.color = '#000000';this.type='password'}",
       :onblur => "if(this.value==''){this.value='Password';this.style.color = '#000000';this.type='text'}"
   .col.s4
-    = f.submit "Login", :class => 'btn black-text teal lighten-4'
+    = f.submit "Login"
 
 = link_to "Or Create Account", new_registration_path(resource_name), :id => "email-link"
