--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -27,7 +27,7 @@
             :style => "color:#000000;background-color:white;border:solid;border-width:2px;height:33px;text-indent:5px;",
             :onfocus => "if(this.value=='Password'){this.value='';this.style.color = '#000000';this.type='password'}",
             :onblur => "if(this.value==''){this.value='Password';this.style.color = '#000000';this.type='text'}"
-          = f.submit "Login", :class => "login-button"
+          = f.submit "Login", :class => "submit-button"
     -else
       #login-container
       =link_to "Logout", destroy_user_session_path, :method => :delete, :class => "logout-button"
