--- a/app/views/users/edit_username.html.haml
+++ b/app/views/users/edit_username.html.haml
@@ -39,7 +39,7 @@
           :class => "big-form img-upload"
     #target
     .section#separator
-      = f.submit "Save", class: "finish-signup"
+      = f.submit "Save", :class => "submit-button"
 :javascript
   $(function() {
     $('#pictureInput').on('change', function(event) {
