--- a/app/views/devise/registrations/login.html.haml
+++ b/app/views/devise/registrations/login.html.haml
@@ -14,6 +14,6 @@
       :onfocus => "if(this.value=='Password'){this.value='';this.style.color = '#000000';this.type='password'}",
       :onblur => "if(this.value==''){this.value='Password';this.style.color = '#000000';this.type='text'}"
   .col.s4
-    = f.submit "Login"
+    = f.submit "Login", :class => "submit-button"
 
 = link_to "Or Create Account", new_registration_path(resource_name), :id => "email-link"
