--- a/app/assets/stylesheets/images.css.scss
+++ b/app/assets/stylesheets/images.css.scss
@@ -65,11 +65,20 @@
   margin-top: 60px;
 }
 
-.check-box {
-  display:none;
+.checkbox {
+  display: none;
+  position: relative;
 }
 
-.check-box + label {
+.checkbox-label {
+  position: absolute;
+  background-size: 70px 70px;
+  height: 70px;
+  width: 70px;
+  background-repeat: no-repeat;
+}
+
+/*.check-box + label {
     background: #999;
     height: 16px;
     width: 16px;
@@ -83,7 +92,7 @@
     width: 16px;
     display:inline-block;
     padding: 0 0 0 0px;
-}
+}*/
 
 .search-placeholder{
   margin-top: 75px;
