--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -37,7 +37,7 @@
       %p#nav-name #{@user.name}
     %p.log.rel#nav-link mysong.is/#{@user.username}
 
-    %img#logo{:border => "none"}
+    %img#logo{:border => "0"}
 
     %img#qr-code{:alt => "My QR code", :src => @qr}
     / .row
