--- a/app/views/layouts/_nolognav.html.haml
+++ b/app/views/layouts/_nolognav.html.haml
@@ -1,5 +1,5 @@
 #nav
   .contents
-    %img#logo.left-justify
+    %img#logo.left-justify{:src => "http://cheshirepus.com/mysongis_logo.png"}
       #login-container
         =link_to "Logout", destroy_user_session_path, :method => :delete, :class => "logout-button"
