--- a/app/assets/stylesheets/images.css.scss
+++ b/app/assets/stylesheets/images.css.scss
@@ -94,6 +94,15 @@
   width: 70px;
   background-repeat: no-repeat;
 
+}
+
+.mysong-label {
+  position: absolute;
+  background-size: 70px 70px;
+  height: 70px;
+  width: 70px;
+  background-repeat: no-repeat;
+
   margin-top: -70px;
 }
 
