--- a/app/assets/stylesheets/images.css.scss
+++ b/app/assets/stylesheets/images.css.scss
@@ -190,7 +190,7 @@
 }
 
 .away-from-edge {
-  margin-left: 10px;
+  margin-left: 10px !important;
 }
 
 .upload-picture {
@@ -200,7 +200,7 @@
 }
 
 .left-justify {
-  left: 20px; /*!important*/
+  margin-left:10px;
 }
 
 .nocolor {
